Add flow image and remove sqlite db

--- a/MovieExplorer.Web/appsettings.json
+++ b/MovieExplorer.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlIteConnection": "Filename=movie.db"
+    "SqlIteConnection": "Filename=movie.db",
+    "SqlServerConnection": ""
   },
   "API": {
     "Token": "",
