feat: Upgrade to .net 7

--- a/MovieExplorer.Web/appsettings.json
+++ b/MovieExplorer.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "SqlIteConnection": "Filename=movie.db",
-    "SqlServerConnection": ""
+    "SqlServerConnection": "Server=NANDA_ANDRADE\\SQLEXPRESS;Database=MovieExplorer;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "API": {
     "Token": "",
